Fix page jump issue and add focus ring to night mode toggle

--- a/_sass/_objects.scss
+++ b/_sass/_objects.scss
@@ -138,7 +138,7 @@ span[role=img][aria-label]:hover::after {
   }
 }
 
-.blend-checkbox:checked ~ .blend-toggle {
+.blender.active ~ .blend-toggle {
   background-image : url('/assets/images/moon.png');
   isolation: isolate;
 }
@@ -151,5 +151,11 @@ img,
 
 .blend-checkbox {
   opacity: 0;
-  position: absolute;
+  position: fixed;
+  right: 1rem;
+  bottom: 1rem;
+}
+
+.blend-checkbox:focus ~ label {
+  outline: 5px auto -webkit-focus-ring-color;
 }
